# secuapp

./: .gitignore  README.md
BACKEND/: main.py  pyproject.toml
BACKEND/https/: backend.csr  backend.key  backend.pem
BACKEND/src/backend/: Handler_logging.py  config.py  constants.py  cryptography.py  log_service.py  main.py  models.py  patch.py  private_key.key  redis.py  router.py  schemas.py  utils.py
BACKEND/src/backend/database/: __init__.py  device.py  encrypted_master_key.py  masterkey.py  shared_stream.py  shared_video.py  stream.py  stream_key.py  token.py  user.py  video.py  webauthn.py
BACKEND/src/backend/helper/: common.py  video_service.py  webRTC_service.py  webSocket_service.py
BACKEND/src/backend/lib/: __init__.py  authjwt.py  mtls.py  otp.py  resend.py  webauthn.py
CA/: pyproject.toml
CA/backend/: app.py  init-ca.sh  requirements.txt  send_email.py  settings.py  start-backend.py
CA/backend/ca/root/: openssl-root.cnf
CA/backend/ca/root/certs/: rootCA.pem  rootCA.srl
CA/backend/ca/root/crl/: rootCA.crl
CA/backend/ca/root/private/: rootCA.key
CA/backend/https/: backend.csr  backend.key  backend.pem
CA/frontend/: index.html  package-lock.json  package.json  vite.config.js
CA/frontend/https/: frontend.csr  frontend.key
CA/frontend/src/: App.jsx  Dashboard.jsx  index.css
CLIENT_Frontend/: .gitignore  Dockerfile  default.conf  index.html  package-lock.json  package.json  vite.config.ts
CLIENT_Frontend/https/: frontend.csr
CLIENT_Frontend/src/: App.tsx  Styles.scss  main.tsx
CLIENT_Frontend/src/components/: LoggedProtectedRoute.tsx  MasterKeyContext.tsx  StoreOperation.tsx  encoding.ts  protectedRoute.tsx  sessionManager.tsx
CLIENT_Frontend/src/pages/components/: ProgressBar.tsx  Stream.tsx  Video.tsx
CLIENT_Frontend/src/pages/devices/: ApproveDevice.tsx
CLIENT_Frontend/src/pages/home/: Home.tsx
CLIENT_Frontend/src/pages/hooks/: useStreamingProcess.ts  useVideoDecryption.tsx  useVideoGeneration.ts  useVideoPlayback.ts  useWebRTC.ts  useWebSocket.ts  useWebcam.ts
CLIENT_Frontend/src/pages/login_register/: Login.tsx  Register.tsx
CLIENT_Frontend/src/pages/root/: Root.tsx
CLIENT_Frontend/src/pages/scripts/: CryptoOperations.tsx  KeyOperations.tsx
CLIENT_Frontend/src/pages/shared/: Shared.tsx
CLIENT_Frontend/src/pages/stream/: Stream.tsx  WatchStream.tsx
CLIENT_Frontend/src/pages/trusted/: Trusted.tsx
CLIENT_Frontend/src/styles/: globals.scss  variables.scss
CLIENT_Frontend/src/styles/home/: _Home.scss
CLIENT_Frontend/src/styles/login_register/: _Login_register.scss  _index.scss
CLIENT_Frontend/src/styles/root/: _Root.scss  _index.scss
CLIENT_Frontend/src/styles/shared/: _Shared.scss  _index.scss
CLIENT_Frontend/src/styles/stream/: _Stream.scss  _index.scss
LOGS/: pyproject.toml
LOGS/src/logs/: backend_public_key.pem  constant.py  database.py  docker-compose.yml  httpslogs.key  httpslogs.pem  main.py  models.py  monitoring.py  private_key_log.key  public_key_log.pem  router.py  utils.py
MTLS/: Dockerfile  nginx.conf
MTLS/certs/: MTLS.csr  MTLS.key  MTLS.pem  ca-chain.pem  server-fullchain.pem
MTLS/crl/: new_crl.sh
